@@ -10,7 +10,8 @@ LanguageTool Change Log
      -Language.REAL_LANGUAGES is now Languages.get()
      -Language.LANGUAGES is now Languages.getWithDemoLanguage() - but you
       will probably want to use Languages.get()
-     -Other static methods from class Language have also been moved to Languages
+    -Other static methods from class Language have also been moved to Languages
+    -PatternToken.getOrGroup() and .getAndGroup() now return an unmodifiable list
 
 
 2.9 (2015-03-30)
